--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
 
     <!-- Load ioBroker scripts and styles-->
@@ -14,7 +13,6 @@
     <script type="text/javascript" src="../../js/adapter-settings.js"></script>
 
     <!-- Load our own files -->
-    <link rel="stylesheet" type="text/css" href="style.css"/>
     <script type="text/javascript" src="words.js"></script>
 
     <script type="text/javascript">
@@ -59,9 +57,7 @@
             callback(obj);
         }
     </script>
-
 </head>
-
 <body>
 
 <div class="m adapter-container">
@@ -71,54 +67,37 @@
             <img src="bshb-logo.jpg" class="logo" alt="Logo">
         </div>
     </div>
-
-    <!-- Put your content here -->
-
-    <!-- For example columns with settings: -->
     <div class="row">
-        <!--			<div class="col s6 input-field">-->
-        <!--				<input type="checkbox" class="value" id="option1" />-->
-        <!--				<label for="option1" class="translate">option1</label>-->
-        <!--			</div>-->
-
-        <!--			<div class="col s6 input-field">-->
-        <!--				<input type="text" class="value" id="option2" />-->
-        <!--				<label for="option2" class="translate">option2</label>-->
-        <!--			</div>-->
         <div class="col s6 input-field">
-            <input type="text" class="value" id="host" placeholder="Enter IP address"/>
-            <label for="host" class="translate">Bosch Smart Home Controller IP address</label>
-            <span class="helper-text" data-error="wrong" data-success="right">IP address of BSHC</span>
+            <input type="text" class="value" id="host"/>
+            <label for="host" class="translate">host</label>
         </div>
         <div class="col s6 input-field">
-            <input type="text" class="value" id="mac" placeholder="Enter Mac address"/>
-            <label for="mac" class="translate">Bosch Smart Home Controller Mac address</label>
-            <span class="helper-text" data-error="wrong" data-success="right">Mac address in format: xx-xx-xx-xx-xx-xx</span>
+            <input type="text" class="value" id="mac"/>
+            <label for="mac" class="translate">mac</label>
+            <span class="helper-text translate" data-error="wrong" data-success="right">mac-detail</span>
         </div>
         <div class="col s6 input-field">
-            <input type="text" class="value" id="identifier" placeholder="e.g. uuid"/>
-            <label for="identifier" class="translate">Unique identifier of created client</label>
-            <span class="helper-text" data-error="wrong" data-success="right">Id will be: oss_ioBroker.bshb_{identifier}. Uuidv4 is a good choice.</span>
+            <input type="text" class="value" id="identifier"/>
+            <label for="identifier" class="translate">identifier</label>
+            <span class="helper-text translate" data-error="wrong" data-success="right">identifier-detail</span>
         </div>
         <div class="col s6 input-field">
-            <input type="password" class="value" id="systemPassword" placeholder="Controller password"/>
-            <label for="systemPassword" class="translate">Bosch Controller password</label>
-            <span class="helper-text" data-error="wrong" data-success="right">Can be removed after pairing was ok</span>
+            <input type="password" class="value" id="systemPassword"/>
+            <label for="systemPassword" class="translate">systemPassword</label>
+            <span class="helper-text translate" data-error="wrong" data-success="right">systemPassword-detail</span>
         </div>
         <div class="col s6 input-field">
-            <input type="text" class="value" id="certsPath" placeholder="Absolute certs path"/>
-            <label for="certsPath" class="translate">Client certificate directory</label>
-            <span class="helper-text" data-error="wrong" data-success="right">Absolute path with corresponding access rights. E.g. /home/iobroker/certs</span>
+            <input type="text" class="value" id="certsPath"/>
+            <label for="certsPath" class="translate">certsPath</label>
+            <span class="helper-text translate" data-error="wrong" data-success="right">certsPath-detail</span>
         </div>
         <div class="col s6 input-field">
-            <input type="number" class="value" id="pairingDelay" placeholder="in ms"/>
-            <label for="pairingDelay" class="translate">Delay during paring attempts in ms</label>
-            <span class="helper-text" data-error="wrong" data-success="right">Time waiting during pairing process attempts</span>
+            <input type="number" class="value" id="pairingDelay"/>
+            <label for="pairingDelay" class="translate">pairingDelay</label>
+            <span class="helper-text translate" data-error="wrong" data-success="right">pairingDelay-detail</span>
         </div>
     </div>
-
 </div>
-
 </body>
-
 </html>
