* (holomekc) rateLimit added. Using 1s per default * (holomekc) increase timeout from 3 to 20. Yes that high... I test spamming the controller. 0s delay results in timeouts, 1s looked very good to me. Nevertheless, 3,5s were not long enough by far.

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -87,6 +87,10 @@
             <label for="pairingDelay" class="translate">pairingDelay</label>
             <span class="helper-text translate" data-error="wrong" data-success="right">pairingDelay-detail</span>
         </div>
+        <div class="col s6 input-field">
+            <input type="number" class="value" id="rateLimit"/>
+            <label for="rateLimit" class="translate">rateLimit</label>
+        </div>
     </div>
 </div>
 </body>
